feat: some stuff
